syntax = "proto3";

package multiplayer;

option go_package = "proto";

message ModeUsageRequest {
    string area_code = 1;
}

message ModeUsageResponse {
    string most_played_mode = 1;
    int32 player_count = 2;
}

service ModeUsageService {
    rpc GetPopularMode (ModeUsageRequest) returns (ModeUsageResponse);
}
